<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />
        
    <item
        android:id="@+id/action_sort"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/sort"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/sort_name_asc"
                android:title="@string/sort_name_asc" />
            <item
                android:id="@+id/sort_name_desc"
                android:title="@string/sort_name_desc" />
            <item
                android:id="@+id/sort_price_asc"
                android:title="@string/sort_price_asc" />
            <item
                android:id="@+id/sort_price_desc"
                android:title="@string/sort_price_desc" />
            <item
                android:id="@+id/sort_category"
                android:title="@string/sort_category" />
        </menu>
    </item>
        
</menu> 