<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <item
        android:id="@+id/action_view_chart"
        android:title="Xem biểu đồ"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        app:showAsAction="ifRoom" />
        
    <item
        android:id="@+id/action_share"
        android:title="@string/share"
        android:icon="@android:drawable/ic_menu_share"
        app:showAsAction="ifRoom" />
        
    <item
        android:id="@+id/action_export_pdf"
        android:title="@string/export_pdf"
        android:icon="@android:drawable/ic_menu_save"
        app:showAsAction="ifRoom" />
        
    <item
        android:id="@+id/action_refresh"
        android:title="@string/refresh"
        android:icon="@android:drawable/ic_menu_rotate"
        app:showAsAction="ifRoom" />
    
    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        app:showAsAction="never" />
</menu> 